crates/parser/tests/snapshots/key_value/boolean.snap
---
source: crates/parser/tests/snapshots_key_value.rs
---
# key_value/boolean

## Input

```
a true
b false

```

## CST

```
SOURCE_FILE@0..15
  ENTRY@0..6
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    BOOLEAN@2..6
      TRUE@2..6 "true"
  NEWLINE@6..7 "\n"
  ENTRY@7..14
    WORD_KEY@7..8
      WORD@7..8 "b"
    SPACE@8..9 " "
    BOOLEAN@9..14
      FALSE@9..14 "false"
  NEWLINE@14..15 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Boolean {
                token: TRUE@2..6 "true",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@7..8 "b",
            },
            value: Boolean {
                token: FALSE@9..14 "false",
            },
        },
    ],
}
```

vim:ft=markdown
