crates/parser/tests/snapshots/key_value/integer_at_eof.snap
---
source: crates/parser/tests/snapshots_key_value.rs
---
# key_value/integer_at_eof

## Input

```
a 42
```

## CST

```
SOURCE_FILE@0..4
  ENTRY@0..4
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..4
      NUMERAL@2..4 "42"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..4 "42",
            },
        },
    ],
}
```

vim:ft=markdown
