crates/parser/tests/snapshots/key_value/missing_value.snap
---
source: crates/parser/tests/snapshots_key_value.rs
---
# key_value/missing_value

## Input

```
lonely

```

## CST

```
SOURCE_FILE@0..7
  ENTRY@0..6
    WORD_KEY@0..6
      WORD@0..6 "lonely"
  NEWLINE@6..7 "\n"
```

## Syntax Error

```
[
    SyntaxError {
        message: "missing value for the key",
        range: 6..6,
    },
]
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..6 "lonely",
            },
            value: none,
        },
    ],
}
```

vim:ft=markdown
